# scrape-glosbe-dict

./: .env.samples  .gitignore  README.md  de-zh.tsv  package.json  pyproject.toml  pyrightconfig.json
scrape_glosbe_dict/: __init__.py  __main__.py  config.py  scrape_glosbe_dict.py
tests/: german.dic  test_config.py  test_scrape_glosbe_dict.py
