[tool.poetry]
name = "scrape_glosbe_dict"
version = "0.1.0"
description = "pack_name descr "
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/scrape-glosbe-dict"

[tool.poetry.dependencies]
python = "^3.8.3"
logzero = "^1.7.0"
icecream = "^2.1.1"
install = "^1.3.5"

[tool.poe.executor]
type = "poetry"

[tool.poe.tasks]
memo = "echo poe test"
test = "pytest tests"
build = "poetry build"
_publish = "poetry publish"
release = ["test", "build", "_publish"]
lint = { cmd = "pylint scrape_glosbe_dict" }
format = "black tests scrape_glosbe_dict"
docstyle = "pydocstyle --convention=google tests scrape_glosbe_dict"
tunnel = {cmd = "ssh -CN ip_or_hostname_defined_in_hosts -L 9091:127.0.0.1:9091"}

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"
# tbump = "^6.3.2"
poethepoet = "^0.10.0"

[tool.poetry.scripts]
"scrape-glosbe-dict" = "scrape_glosbe_dict.__main__:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"
log_cli = true
testpaths = [
    "tests",
    # "integration",
]

[tool.black]
skip-string-normalization = 0

[tool.isort]
profile = "black"
multi_line_output = 3
